--- a/datiJS/HTML%mortalità/index.html
+++ b/datiJS/HTML%mortalità/index.html
@@ -1,41 +1,106 @@
 <!DOCTYPE html>
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="file.js"></script>
+    <link rel="stylesheet" href="style.css">
     <title>%mortalità</title>
+
+    <!--1o Link css bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 </head>
+
 <body>
-    <p>
-        <label>Età compresa tra:</label>
+
+    <b>
+        <p class="P1">Survival Rate Calculator</p>
+    </b>
+    <br>
+    <div class="Div">
         <p>
-            <input type="radio" id="radio19" name="ageGroup" value="0">1 - 19
-            <input type="radio" id="radio39" name="ageGroup" value="1">20 - 39
-            <input type="radio" id="radio59" name="ageGroup" value="2">40 - 59
-            <input type="radio" id="radio79" name="ageGroup" value="3">60 - 79
-            <input type="radio" id="radioOver" name="ageGroup" value="4">80 - 100+
+            <b><label class="label">Età compresa tra:</label></b>
         </p>
-    </p>
-    <p>
-        <label>Genere:</label>
         <p>
-            <input type="radio" name="sexGroup" id="radioMaschio" value="0">Maschio
-            <input type="radio" name="sexGroup" id="radioFemmina" value="1">Femmina
+            <label class="container">
+                <input type="radio" name="ageGroup" id="radio19" value="0">
+                <span class="checkmark"> 01 - 19 </span>
+            </label>
+            <label class="container">
+                <input type="radio" name="ageGroup" id="radio39" value="1">
+                <span class="checkmark">20 - 39</span>
+            </label>
+            <label class="container">
+                <input type="radio" name="ageGroup" id="radio59" value="1">
+                <span class="checkmark">40 - 59</span>
+            </label>
+            <label class="container">
+                <input type="radio" name="ageGroup" id="radio79" value="1">
+                <span class="checkmark">60 - 79</span>
+            </label>
+            <label class="container">
+                <input type="radio" name="ageGroup" id="radioOver" value="1">
+                <span class="checkmark">80 - 100+</span>
+            </label>
         </p>
-    </p>
-    <p>
-        <label>Problematiche:</label>
+        <br>
         <p>
-            <input type="checkbox" id="checkIpertensione">Ipertensione
-            <input type="checkbox" id="checkRespiratori">Problemi respiratori cronici
-            <input type="checkbox" id="checkDiabete">Diabete
-            <input type="checkbox" id="checkCardio">problemi cardiaci
+            <b><label class="label">Genere:</label></b>
         </p>
-    </p>
-    <p>
-        <button id="btnCalcola" onclick="Calcola()">Calcola tasso mortalità</button>
-        <button id="btnReset" onclick="Reset()">Reset</button>
-    </p>
+        <br>
+        <p>
+            <label class="container">
+                <input type="radio" name="sexGroup" id="radioMaschio" value="0">
+                <span class="checkmark"> Maschio </span>
+            </label>
+            <label class="container">
+                <input type="radio" name="sexGroup" id="radioFemmina" value="1">
+                <span class="checkmark">Femmina</span>
+            </label>
+        </p>
+        <br>
+        <p>
+            <b><label class="label">Problematiche:</label></b>
+        </p>
+        <br>
+        <p>
+            <label class="switch">
+                <input type="checkbox" id="checkIpertensione">
+                <span class="slider"></span>
+            </label>Ipertensione
+        </p>
+        <p>
+
+            <label class="switch">
+                <input type="checkbox" id="checkRespiratori">
+                <span class="slider"></span>
+            </label>Problemi respiratori cronici
+        </p>
+        <p>
+
+            <label class="switch">
+                <input type="checkbox" id="checkDiabete">
+                <span class="slider"></span>
+            </label>Diabete
+        </p>
+        <p>
+
+            <label class="switch">
+                <input type="checkbox" id="checkCardio">
+                <span class="slider"></span>
+            </label>problemi cardiaci
+        </p>
+        <br>
+        <p>
+            <button id="btnCalcola" onclick="Calcola()" class="Button">Calcola tasso mortalità</button>
+        </p>
+    </div>
+    <!-- JS Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
