--- a/datiJS/HTML%mortalità/index.html
+++ b/datiJS/HTML%mortalità/index.html
@@ -113,7 +113,13 @@
                 <button id="btnCalcola" onclick="Calcola()" class="Button">Calcola tasso mortalità</button>
             </p>
         </div>
-        <div class="Div" id="Risulato"></div>
+        <div class="Div" >
+            <div class="row nopad text-center">
+                <div class="col px-2 mb-2" >
+                        <p id="Risulato"></p>
+                </div>
+            </div>
+        </div>
     </form>
     <!-- JS Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
