--- a/datiJS/HTML%mortalità/index.html
+++ b/datiJS/HTML%mortalità/index.html
@@ -108,6 +108,13 @@
                     <span class="slider"></span>
                 </label>problemi cardiaci
             </p>
+            <p>
+
+                <label class="switch">
+                    <input type="checkbox" id="checkCancro">
+                    <span class="slider"></span>
+                </label>Cancro
+            </p>
             <br>
             <p>
                 <button id="btnCalcola" onclick="Calcola()" class="Button">Calcola tasso mortalità</button>
