--- a/datiJS/HTML%mortalità/index.html
+++ b/datiJS/HTML%mortalità/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="file.js"></script>
     <link rel="stylesheet" href="style.css">
-    <title>%mortalità</title>
+    <title>Mortalità</title>
 
     <!--1o Link css bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -18,116 +18,109 @@
         <p class="P1">Survival Rate Calculator</p>
     </b>
     <br>
-    <form>
-        <div class="Div">
-            <div class="col nopad mb-4">
+    <div class="Div">
+        <div class="col nopad mb-4">
 
-                <h5 class="font-weight-bold mb-3">Età compresa tra:</h5>
-                <div class="row row-cols-md-3 row-cols-xg-5 row-cols-lg-4 row-cols-1 nopad text-center">
-                    <div class="col  mb-2">
-                        <label class="container">
-                            <input type="radio" name="ageGroup" id="radio19" value="0">
-                            <span class="checkmark"> 01 - 19 </span>
-                        </label>
-                    </div>
-                    <div class="col mb-2">
-                        <label class="container">
-                            <input type="radio" name="ageGroup" id="radio39" value="1">
-                            <span class="checkmark">20 - 39</span>
-                        </label>
-                    </div>
-                    <div class="col  mb-2">
-                        <label class="container">
-                            <input type="radio" name="ageGroup" id="radio59" value="1">
-                            <span class="checkmark">40 - 59</span>
-                        </label>
-                    </div>
-                    <div class="col mb-2">
-                        <label class="container">
-                            <input type="radio" name="ageGroup" id="radio79" value="1">
-                            <span class="checkmark">60 - 79</span>
-                        </label>
-                    </div>
-                    <div class="col  mb-2">
-                        <label class="container">
-                            <input type="radio" name="ageGroup" id="radioOver" value="1">
-                            <span class="checkmark">80 - 100+</span>
-                        </label>
-                    </div>
+            <div id="divRisultato"></div>
 
-                </div>
-
-            </div>
-            <h5 class="font-weight-bold mb-3">Genere:</h5>
-
-            <br>
-            <div class="row px-2 row-cols-lg-2 row-cols-1 nopad text-center">
-                <div class="col px-2 mb-2">
+            <h5 class="font-weight-bold mb-3">Età compresa tra:</h5>
+            <div class="row row-cols-md-3 row-cols-xg-5 row-cols-lg-4 row-cols-1 nopad text-center">
+                <div class="col  mb-2">
                     <label class="container">
-                        <input type="radio" name="sexGroup" id="radioMaschio" value="0">
-                        <span class="checkmark"> Maschio </span>
+                        <input type="radio" name="ageGroup" id="radio19" value=".2">
+                        <span class="checkmark"> 01 - 19 </span>
                     </label>
                 </div>
-                <div class="col px-2 mb-2">
+                <div class="col mb-2">
                     <label class="container">
-                        <input type="radio" name="sexGroup" id="radioFemmina" value="1">
-                        <span class="checkmark">Femmina</span>
+                        <input type="radio" name="ageGroup" id="radio39" value=".3">
+                        <span class="checkmark">20 - 39</span>
                     </label>
                 </div>
-            </div>
-
-            <br>
-            <p>
-                <b><label class="label">Problematiche:</label></b>
-            </p>
-            <br>
-            <p>
-                <label class="switch">
-                    <input type="checkbox" id="checkIpertensione">
-                    <span class="slider"></span>
-                </label>Ipertensione
-            </p>
-            <p>
-
-                <label class="switch">
-                    <input type="checkbox" id="checkRespiratori">
-                    <span class="slider"></span>
-                </label>Problemi respiratori cronici
-            </p>
-            <p>
-
-                <label class="switch">
-                    <input type="checkbox" id="checkDiabete">
-                    <span class="slider"></span>
-                </label>Diabete
-            </p>
-            <p>
-
-                <label class="switch">
-                    <input type="checkbox" id="checkCardio">
-                    <span class="slider"></span>
-                </label>problemi cardiaci
-            </p>
-            <p>
-
-                <label class="switch">
-                    <input type="checkbox" id="checkCancro">
-                    <span class="slider"></span>
-                </label>Cancro
-            </p>
-            <br>
-            <p>
-                <button id="btnCalcola" onclick="Calcola()" class="Button">Calcola tasso mortalità</button>
-            </p>
-        </div>
-        <div class="Div" >
-            <div class="row nopad text-center">
-                <div class="col px-2 mb-2" >
-                        <p id="Risulato"></p>
+                <div class="col  mb-2">
+                    <label class="container">
+                        <input type="radio" name="ageGroup" id="radio59" value="2.5">
+                        <span class="checkmark">40 - 59</span>
+                    </label>
                 </div>
+                <div class="col mb-2">
+                    <label class="container">
+                        <input type="radio" name="ageGroup" id="radio79" value="5">
+                        <span class="checkmark">60 - 79</span>
+                    </label>
+                </div>
+                <div class="col  mb-2">
+                    <label class="container">
+                        <input type="radio" name="ageGroup" id="radioOver" value="14.8">
+                        <span class="checkmark">80 - 100+</span>
+                    </label>
+                </div>
+
+            </div>
+
+        </div>
+        <h5 class="font-weight-bold mb-3">Genere:</h5>
+
+        <br>
+        <div class="row px-2 row-cols-lg-2 row-cols-1 nopad text-center">
+            <div class="col px-2 mb-2">
+                <label class="container">
+                    <input type="radio" name="sexGroup" id="radioMaschio" value=".15">
+                    <span class="checkmark"> Maschio </span>
+                </label>
+            </div>
+            <div class="col px-2 mb-2">
+                <label class="container">
+                    <input type="radio" name="sexGroup" id="radioFemmina" value=".035">
+                    <span class="checkmark">Femmina</span>
+                </label>
             </div>
         </div>
-    </form>
+
+        <br>
+        <p>
+            <b><label class="label">Problematiche:</label></b>
+        </p>
+        <br>
+        <p>
+            <label class="switch">
+                <input type="checkbox" id="checkIpertensione" value="6">
+                <span class="slider"></span>
+            </label>Ipertensione
+        </p>
+        <p>
+
+            <label class="switch">
+                <input type="checkbox" id="checkRespiratori" value="6.3">
+                <span class="slider"></span>
+            </label>Problemi respiratori cronici
+        </p>
+        <p>
+
+            <label class="switch">
+                <input type="checkbox" id="checkDiabete" value="7.3">
+                <span class="slider"></span>
+            </label>Diabete
+        </p>
+        <p>
+
+            <label class="switch">
+                <input type="checkbox" id="checkCardio" value="10.5">
+                <span class="slider"></span>
+            </label>problemi cardiaci
+        </p>
+        <p>
+
+            <label class="switch">
+                <input type="checkbox" id="checkCancro" value="5.6">
+                <span class="slider"></span>
+            </label>Cancro
+        </p>
+        <br>
+        <p>
+            <button id="btnCalcola" onclick="Calcola()" class="Button">Calcola tasso mortalità</button>
+        </p>
+    </div>
     <!-- JS Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
