--- a/progetto/game.html
+++ b/progetto/game.html
@@ -3,9 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="shortcut icon" href="img/amati-pietro-misure-prevenzione-covid.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>progetto</title>
+    <title>Progetto Covid Chart</title>
     <script src="dati.js"></script>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
